# stock-logistics-transport

./: README.md  test-requirements.txt
.oca/oca-port/blacklist/: stock_dock.json
setup/_metapackage/: pyproject.toml
stock_dock/: README.rst  __manifest__.py
stock_dock/static/description/: index.html
stock_dock/views/: stock_dock.xml
stock_packaging_calculator_packaging_level/: README.rst  __manifest__.py
stock_packaging_calculator_packaging_level/readme/: CREDITS.md
stock_packaging_calculator_packaging_level/static/description/: index.html
